# zetteltex

./: .gitignore  Cargo.toml  fix_links.py  fix_moved.sh
crates/zetteltex-cli/: Cargo.toml
crates/zetteltex-cli/src/: main.rs
crates/zetteltex-cli/tests/: cli_smoke.rs
crates/zetteltex-core/: Cargo.toml
crates/zetteltex-core/src/: lib.rs
crates/zetteltex-db/: Cargo.toml
crates/zetteltex-db/src/: lib.rs
crates/zetteltex-parser/: Cargo.toml
crates/zetteltex-parser/src/: lib.rs
docs/: README.md
docs/00-indice/: README.md  rutas-lectura.md
docs/01-guia-usuario/: README.md  configuracion.md  exportacion.md  flujo-diario.md  fuzzy.md  inicio-rapido.md  preguntas-frecuentes.md  quickstart.md  solucion-problemas.md
docs/02-guia-tecnica/: README.md  api.md  modelo-datos.md  modelo-workspace.md  pipeline-export.md  pipeline-render.md  sincronizacion.md
docs/03-comandos/: 00-referencia.md  README.md
docs/03-comandos/export/: export_all_markdown.md  export_all_notes_markdown.md  export_all_projects_markdown.md  export_draft.md  export_markdown.md  export_project.md  export_project_markdown.md  to_md.md
docs/03-comandos/fuzzy/: fuzzy.md
docs/03-comandos/notas/: addtodocuments.md  edit.md  list_citations.md  list_recent_files.md  list_unreferenced.md  newnote.md  remove_note.md  rename_file.md  (+2 more)
docs/04-arquitectura/: 01-vision-general.md  02-flujo-comando.md  03-modelo-datos.md  04-render-actualizacion.md  05-testing.md  README.md
docs/05-funciones-codigo/: README.md
template/: note.tex  project.tex  style.sty  texbook.cls  texnote.cls
(+35 files in other folders)
