[workspace]
members = [
    "crates/zetteltex-core",
    "crates/zetteltex-db",
    "crates/zetteltex-parser",
    "crates/zetteltex-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Hugo Marquerie"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
