[package]
name = "zetteltex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "zetteltex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
serde.workspace = true
serde_json = "1"
toml = "0.8"
strsim = "0.11"
crossterm = "0.28"
ratatui = "0.28"
indicatif = "0.17"
zetteltex-core = { path = "../zetteltex-core" }
zetteltex-db = { path = "../zetteltex-db" }
zetteltex-parser = { path = "../zetteltex-parser" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite.workspace = true
